order-reception/src/main/kotlin/com/example/orderreception/error/ValidationError.kt
package com.example.orderreception.error

interface ValidationError {
    val message: String
}